--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
 niri-ipc = "25.1.0"
+regex = "1.11.1"
 
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
