--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "niri-launcher"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
+neovim-lib = "0.6.1"
 niri-ipc = "25.5.1"
+nix = { version = "0.30.1", features = [ "user" ] }
 regex = "1.11.1"
 
 serde = { version = "1.0.217", features = ["derive"] }
